--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React Movies</title>
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    /> -->
+    />
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
